[tool.poetry]
name = "date_converter"
version = "0.1.0"
description = "Automatically convert datenum to tdate string of yyyy-mm-dd, or convert date string to datenumm"
authors = ["suuuuperNOVA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
