[tool.poetry]
name = "date_converter"
version = "0.1.0"
description = "Automatically convert datenum to tdate string of yyyy-mm-dd, or convert date string to datenumm"
authors = ["suuuuperNOVA"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
